@@ -17,6 +17,8 @@ Version 5.1.8
     any restrictions more specific than table name (bug #43991)
   - fixed potential endless loop in CompressedStream in case where end of stream occurs before 
     packet is fully read (bug #43678)
+  - fixed ReservedWords schema collection to not incorrectly include blank words and to use the
+    right column name
   
 Version 5.1.7 - 8/20/08
  - Fixed problem with DDEX provider that could sometimes prevent table altering when working with
